agregado el main layout

--- a/NorthWind.Sales.Frontend.Views/_Imports.razor
+++ b/NorthWind.Sales.Frontend.Views/_Imports.razor
@@ -1,2 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Forms
+@using NorthWind.Sales.Frontend.Views.Components
+@using NorthWind.Razor.Components.Exceptions
+@using NorthWind.Razor.Components.Layouts
+@using Microsoft.AspNetCore.Components.Sections
+@using NorthWind.Razor.Components.NavBars
+@using Microsoft.AspNetCore.Components.Routing
