agregado el cliente blazor

--- a/NorthWind.Sales.BlazorClient/Pages/Index.razor
+++ b/NorthWind.Sales.BlazorClient/Pages/Index.razor
@@ -1,11 +1,9 @@
 ﻿@page "/"  
 
-<PageTitle>Digital Door Configurationi App</PageTitle>
-
 
 <div class="main-content">
     <div class="container">
-        <h4 class="title c-title mb-30">Welcome to Digital Door Platform</h4>
+        <h4 class="title c-title mb-30">NorthWind 2024 NET 8 Clean Architecture</h4>
         <div class="general-wp menu">
             <div class="columns">                
             </div>
