--- a/NorthWind.Sales.BlazorClient/wwwroot/css/app.css
+++ b/NorthWind.Sales.BlazorClient/wwwroot/css/app.css
@@ -1,3 +1,11 @@
+html, body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif
+}
+
+h1:focus{
+    outline:none;
+}
+
 .valid.modified:not([type=checkbox]) {
     outline: 1px solid #26b050;
 }
