--- a/NorthWind.Sales.MauiClient/Components/_Imports.razor
+++ b/NorthWind.Sales.MauiClient/Components/_Imports.razor
@@ -4,8 +4,8 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using NorthWind.Sales.BlazorClient
+@using NorthWind.Sales.MauiClient
+@using NorthWind.Sales.MauiClient.Components  
 @using NorthWind.Sales.Frontend.Views.Layouts
 @using System.Reflection
