--- a/NorthWind.Sales.Frontend.Views/Pages/CreateOrder.razor
+++ b/NorthWind.Sales.Frontend.Views/Pages/CreateOrder.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>@CreateOrderMessages.CreateOrderPageTitle</PageTitle>
 
-<ErrorBoundary>
+<ErrorBoundary @ref=ErrorBoundaryRef>
     <ChildContent>
         <CreateOrderComponent Order="ViewModel" />
     </ChildContent>
