--- a/NorthWind.Sales.Frontend.Views/_Imports.razor
+++ b/NorthWind.Sales.Frontend.Views/_Imports.razor
@@ -6,3 +6,4 @@
 @using Microsoft.AspNetCore.Components.Sections
 @using NorthWind.Razor.Components.NavBars
 @using Microsoft.AspNetCore.Components.Routing
+@using NorthWind.Razor.Components.Validators
