implementado que se vean los errores correctamente desde la api al form una vez enviada la peticion

--- a/NorthWind.Sales.Frontend.Views/Components/CreateOrderComponent.razor
+++ b/NorthWind.Sales.Frontend.Views/Components/CreateOrderComponent.razor
@@ -1,5 +1,5 @@
 ﻿<EditForm Model="Order" OnValidSubmit=Order.Send>
-    <ModelValidator Validator="Order.Validator" />
+    <ModelValidator Validator="Order.Validator" @ref=Order.ModelValidatorComponentReference/>
     <ValidationSummary />
     <div class="form-group">
         <label for="customerId">
