implementado el ui para registro de usuario

--- a/NorthWind.Sales.BlazorClient/App.razor
+++ b/NorthWind.Sales.BlazorClient/App.razor
@@ -15,7 +15,8 @@
 @code{
     Assembly[] AdditionalAssemblies => new Assembly[]
         {
-        typeof(NorthWind.Sales.Frontend.Views.Pages.CreateOrder).Assembly
+        typeof(NorthWind.Sales.Frontend.Views.Pages.CreateOrder).Assembly,
+        MembershipPages.Assembly
         };
 
 }
