--- a/NorthWind.Sales.BlazorClient/_Imports.razor
+++ b/NorthWind.Sales.BlazorClient/_Imports.razor
@@ -9,3 +9,4 @@
 @using NorthWind.Sales.BlazorClient
 @using NorthWind.Sales.Frontend.Views.Layouts
 @using System.Reflection
+@using NorthWind.Membership.Frondend.RazorViews.Extensions
